Safari365 Prod/src/objects/Lead_History__c.object
<CustomObject>
    <fields>
        <fullName>Absolute_luxury__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Absolute luxury</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activate_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_and_adventure_tours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active and adventure tours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activities__c</fullName>
        <label>Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Family Friendly</fullName>
                </value>
                <value>
                    <fullName>Romance</fullName>
                </value>
                <value>
                    <fullName>The Great Migration</fullName>
                </value>
                <value>
                    <fullName>Climbing Kilimanjaro</fullName>
                </value>
                <value>
                    <fullName>Wildlife Safaris</fullName>
                </value>
                <value>
                    <fullName>Gorilla Trekking</fullName>
                </value>
                <value>
                    <fullName>Beach Holiday</fullName>
                </value>
                <value>
                    <fullName>Adventure</fullName>
                </value>
                <value>
                    <fullName>Food and wine</fullName>
                </value>
                <value>
                    <fullName>History and culture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adventure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adventure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adventure_activities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adventure activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lead Historys</relationshipLabel>
        <relationshipName>Lead_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ages_of_Children__c</fullName>
        <label>Ages of Children</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Basket_Information__c</fullName>
        <label>Basket Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Beach_and_bush_safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beach and bush safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beach_relaxation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beach relaxation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Botswana__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Botswana</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Browser_Trial__c</fullName>
        <label>Browser Trial</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Total__c</fullName>
        <label>Budget Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_or_Star_Rating__c</fullName>
        <label>Budget or Star Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budget_safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Canoe_Safari__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Canoe Safari</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cape_Town_SA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cape Town (SA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Comments__c</fullName>
        <label>Client Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Climbing_Kilimanjaro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Climbing Kilimanjaro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Image__c</fullName>
        <formula>IMAGE( OwnerImageId__c , &quot;Consultant&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Profile_Link__c</fullName>
        <formula>HYPERLINK( Consultant_Profile__c , &quot; Click here for a full profile &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Profile Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Profile__c</fullName>
        <label>Consultant Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Working_Since__c</fullName>
        <formula>$User.Working_Since__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Working Since</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultanthasreplied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consultant has replied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Method__c</fullName>
        <label>Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConvertMe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConvertMe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_of_residence__c</fullName>
        <label>Country of residence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Djibouti</fullName>
                </value>
                <value>
                    <fullName>Dominica</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Ghana</fullName>
                </value>
                <value>
                    <fullName>Gibraltar</fullName>
                </value>
                <value>
                    <fullName>Greenland</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Jordan</fullName>
                </value>
                <value>
                    <fullName>Korea, Republic of</fullName>
                </value>
                <value>
                    <fullName>Kuwait</fullName>
                </value>
                <value>
                    <fullName>Latvia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Culture_and_history__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Culture and history</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_has_Replied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer has Replied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName__c)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName__c)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company__c)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone__c)=0, &quot;Phone__c, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation__c,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISBLANK(Rating__c), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City__c)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email__c)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName__c ) = 0, 0,15) + IF(LEN( LastName__c ) = 0, 0,15) + IF(LEN( Company__c ) = 0, 0,15) + IF(LEN( Phone__c ) = 0, 0,15) + IF( ISPICKVAL( Salutation__c,&quot;&quot;), 0,10) + IF( IsBlank(Rating__c), 0,10) + IF( LEN( City__c ) = 0, 0,10) + IF( LEN( Email__c ) = 0, 0,10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Destinations__c</fullName>
        <label>Destinations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cape Town (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Cape Winelands (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Garden Route (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Kwa-Zulu Natal (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Kruger National Park (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Madikwe</fullName>
                </value>
                <value>
                    <fullName>Sun City (South Africa)</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Mozambique</fullName>
                </value>
                <value>
                    <fullName>Namibia</fullName>
                </value>
                <value>
                    <fullName>Victoria Falls</fullName>
                </value>
                <value>
                    <fullName>Zambia</fullName>
                </value>
                <value>
                    <fullName>Masai Mara</fullName>
                </value>
                <value>
                    <fullName>Serengeti National Park</fullName>
                </value>
                <value>
                    <fullName>Ngorongoro Crater</fullName>
                </value>
                <value>
                    <fullName>Kenya Beaches</fullName>
                </value>
                <value>
                    <fullName>Mt Kilimanjaro</fullName>
                </value>
                <value>
                    <fullName>Zanzibar and Pemba</fullName>
                </value>
                <value>
                    <fullName>Rwanda</fullName>
                </value>
                <value>
                    <fullName>Uganda</fullName>
                </value>
                <value>
                    <fullName>Other Tanzania National Parks</fullName>
                </value>
                <value>
                    <fullName>Other Kenya National Reserve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_not_remind_me__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not remind me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enquiry_Ref_No__c</fullName>
        <label>Enquiry Ref No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_item__c</fullName>
        <label>Enquiry item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Friendly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family Friendly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Family_safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fishing_adventures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fishing adventures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fly_In_safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fly-In safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Food_and_Wine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Food and Wine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Garden_Route_SA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Garden Route (SA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Golf_combination_holidays__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Golf combination holidays</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gorilla_Trekking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gorilla Trekking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hiking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hiking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>History_and_culture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>History and culture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Honeymoons_and_Romance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Honeymoons and Romance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hot_air_ballooning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hot-air ballooning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Company__c</fullName>
        <label>Internal Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Safari 365</fullName>
                </value>
                <value>
                    <fullName>South Africa 365</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>International_Flight_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International Flight Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kenya__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kenya</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kenyan_beaches__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kenyan beaches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kruger_National_Park_SA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kruger National Park (SA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kwa_Zulu_Natal_SA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kwa-Zulu Natal (SA)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landing_Page_del__c</fullName>
        <label>Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Cost__c</fullName>
        <label>Lead Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Nurture__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exists as Lead Nurture</label>
        <referenceTo>Lead_Nurture__c</referenceTo>
        <relationshipLabel>Lead Historys</relationshipLabel>
        <relationshipName>Lead_Historys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Kenyan_National_Reserves__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Kenyan National Reserves</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Tanzania_National_Parks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Tanzania National Parks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerImageId__c</fullName>
        <label>OwnerImageId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Client_s_Name__c</fullName>
        <label>Referral Client&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roughing_it__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roughing it</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rwanda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rwanda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFGA_CorrelationID__c</fullName>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA_Correlation_Data__c</fullName>
        <label>Correlation Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA_Web_Source__c</fullName>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Miss.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_escorted_tours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled escorted tours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_drive_tours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self drive tours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serengeti_National_Park__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Serengeti National Park</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shark_cage_diving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shark cage diving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>South_Africa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>South Africa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spa_and_rejuvenation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spa and rejuvenation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>South Africa 365</fullName>
                </value>
                <value>
                    <fullName>Safari 365</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tanzania__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tanzania</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>The_Great_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The Great Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Participants__c</fullName>
        <label>Total Participants</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Date_Options__c</fullName>
        <label>Travel Date Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>Flexible within 3 days</fullName>
                </value>
                <value>
                    <fullName>Flexible within 2 weeks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uganda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uganda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <label>Unqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No response to emails/phone calls (send to LN)</fullName>
                </value>
                <value>
                    <fullName>Insufficient budget</fullName>
                </value>
                <value>
                    <fullName>Client booked with another competitor (who/why ?)</fullName>
                </value>
                <value>
                    <fullName>Client changed their travel destination (send to LN)</fullName>
                </value>
                <value>
                    <fullName>Client cancelled their travel plans (send to LN)</fullName>
                </value>
                <value>
                    <fullName>Client postponed their trip (send to LN)</fullName>
                </value>
                <value>
                    <fullName>Booking parked - to contact later (send to LN)</fullName>
                </value>
                <value>
                    <fullName>Other, why? (send to LN)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Victoria_Falls__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Victoria Falls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Walking_Safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Walking Safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_origin__c</fullName>
        <label>Website origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web: safari365.com</fullName>
                </value>
                <value>
                    <fullName>Web: safari365.com.au</fullName>
                </value>
                <value>
                    <fullName>Web: southafrica365.com</fullName>
                </value>
                <value>
                    <fullName>Web:safari365.com.tur.br</fullName>
                </value>
                <value>
                    <fullName>Web: top5africa.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Whale_watching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Whale watching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wildlife_Safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wildlife Safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zambia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zambia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zanzibar_and_Pemba__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zanzibar and Pemba</label>
        <type>Checkbox</type>
    </fields>
    <label>Lead History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lead History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>